# AWS-AI-Agent-Hackathon-2025

./: README.md
agent-demo-backend/: .dockerignore  .env.example  Dockerfile  README.md  build.sh  builtin_actions.py  crud.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt  run.sh  session_manager.py  test_frontend_action.py
agent-demo-client/: index.html  package-lock.json  package.json
agent-schema-backend/: package-lock.json  package.json  template.yaml
agent-schema-client/: .env  .env.example  README.md  index.html  (+2 more)
strands-code-generator/: .env.example  README.md  agentSchema.json  process_config.py  pyproject.toml  requirements.txt
strands-code-generator/src/: __init__.py  exceptions.py  main.py
strands-code-generator/src/agent_factory/: __init__.py
strands-code-generator/src/config/: __init__.py  settings.py
strands-code-generator/src/deployment/: __init__.py  package_generator.py
strands-code-generator/src/dynamic_strands_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
strands-code-generator/src/dynamic_tool_generator/: __init__.py  agent_schema.py  agent_transformer.py  engine.py  frontend_schema.py  module_generator.py  module_loader.py  schema_generator.py  template_manager.py  tool_spec_transformer.py
strands-code-generator/src/interfaces/: __init__.py  agent_factory.py  deployment_generator.py  sse_manager.py  tool_generator.py
strands-code-generator/src/models/: __init__.py  agent_config.py  deployment_models.py  sse_models.py  tool_spec.py
strands-code-generator/tests/: __init__.py  conftest.py
(+108 files in other folders)
